<resources>
    <string name="app_name">Lesson2</string>
    <string name="hint_for_name_editText">Имя</string>
    <string name="hint_for_secondName_editText">Фамилия</string>
    <string name="hint_for_password_editText">Пароль</string>
    <string name="hint_for_submit_password_editText">Подтверждение пароля</string>
    <string name="greeting">Лол</string>
    <string name="example_email_for_registration">simpleEmail@pochta.kek</string>
    <string name="suggestion_to_log_in">Уже есть аккаунт? Войти</string>
    <string name="registration_button"> Регистрация</string>

    <string name="kekGreeeting">Кек</string>
    <string name="email">Email</string>
    <string name="example_email_authorization">simpleEmail@pochta.kek</string>
    <string name="authorization_button">Войти</string>
    <string name="suggestion_to_sign_up">Нет аккаунта? Зарегайся!</string>
</resources>